frontend/counter-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: counter-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
      - name: counter-frontend
        image: /counter-frontend:v1
        ports:
        - containerPort: 80
