frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
spec:
  selector:
    app: counter-frontend
  ports:
  - name: 3000-tcp
    protocol: TCP
    port: 3000
    targetPort: 3000
